--- a/publications.html
+++ b/publications.html
@@ -144,6 +144,15 @@
 
             <hr class="hr_style">
             <div class="paper">
+                <div class="img_position"> <img class="img_style" src="./publication_imgs/2026-MedIA-dynamical.png"> </div>
+                <div class="title"> Dynamical Multi-Order Responses and Global Semantic-Infused Adversarial Learning: A Robust Airway Segmentation Method. </div>
+                <div class="author"> Sheng Zhang, Yang Nan, Yingying Fang, Shiyi Wang, Yongkai Liu, Giorgos Papanastasiou, <div class="my_name">Zhifan Gao</div>, Shuo Li, Simon Walsh, Guang Yang. </div>
+                <div class="source"> <div class="source_name"> Medical Image Analysis </div> 108:103867, 2026 </div>
+                <div class="link"> <br>[<a href="https://doi.org/10.1016/j.media.2025.103867">paper</a>] </div>
+            </div>
+
+            <hr class="hr_style">
+            <div class="paper">
                 <div class="img_position"> <img class="img_style" src="./publication_imgs/2025-MedIA-category.png"> </div>
                 <div class="title"> Category-Specific Unlabeled Data Risk Minimization for Ultrasound Semi-supervised Segmentation. </div>
                 <div class="author"> Lu Xu, Mingyuan Liu, Boxuan Wei, Yihua He, <div class="my_name">Zhifan Gao</div>, Hongbin Han, Jicong Zhang. </div>
@@ -1204,6 +1213,7 @@
     </body>
     </html>
     
+
 
 
 
